# BritaRH

./: .env.example  .gitignore  README.md  apresentacao_britarh.html  docker-compose.yml  package-lock.json  package.json
.claude-design/slide-previews/: style-a.html  style-b.html  style-c.html
.github/workflows/: backend.yml  frontend.yml
backend/: .coverage  Dockerfile  alembic.ini  export_openapi.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0109a6f8a089_add_users_table_and_roles.py  1f420fdbbf49_add_cpf_and_birth_date_to_users.py  76900ba5d8c4_initial_uuid_schema_fixed.py  a9b2c3d4e5f6_improve_db_performance_and_integrity.py  aaca3eb13b1a_initial_schema.py
backend/app/: __init__.py  main.py  seed_demo.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  health.py
backend/app/api/v1/endpoints/: applications.py  auth.py  jobs.py  recruiter.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/domain/: entities.py  interfaces.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  application.py  auth.py  job.py  question.py  recruiter.py  user.py
backend/app/services/: __init__.py  auth.py  storage.py
backend/scripts/: prestart.sh  verify_db.py
backend/tests/: conftest.py  test_applications.py  test_applications_expanded.py  test_auth_full.py  test_auth_unit.py  test_coverage_booster.py  test_health.py  test_jobs.py  test_recruiter_dashboard.py  test_schemas_unit.py  test_security_audit.py  test_security_unauthorized.py
frontend/: Dockerfile  auth.ts  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.test.json  vitest.config.ts
frontend/src/: auth.ts
frontend/src/__tests__/: QuestionBuilder.test.tsx  job-validation.test.ts  setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: icons.tsx
frontend/src/types/: next-auth.d.ts
frontend/src/utils/: masks.ts
openspec/: config.yaml
pages_prototype/confirma_o_de_contrata_o/: code.html  code.html:Zone.Identifier
pages_prototype/confirmation_page/: code.html
pages_prototype/dashboard_do_recrutador/: code.html
pages_prototype/editar_vaga_bloqueada/: code.html
pages_prototype/job_listings/: code.html
pages_prototype/knowledge_test_step_2/: code.html
pages_prototype/login_page/: code.html
pages_prototype/nova_vaga/: code.html
pages_prototype/profile_form_step_1/: code.html
pages_prototype/resume_upload_step_3/: code.html
pages_prototype/visualiza_o_de_candidatos/: code.html
(+49 files in other folders)
